...
            value = searchText,
            onValueChange = onTextChange,
            modifier = Modifier
                .alpha(1f - alpha)
                .fillMaxWidth()
                .height(height = 52.dp)
                .testTag("VENDORS_SEARCH_FIELD_TEST_TAG"),
            textStyle = MaterialTheme.typography.subtitle1,
            trailingIcon = {
                IconButton(onClick = performSearch) {
                    Icon(
                        contentDescription = "Search Icon",
                        painter = painterResource(id = R.drawable.ic_search),
                        modifier = Modifier.size(24.dp),
                        tint = VendorAppTheme.colors.text
                    )
                }
            },
...
