...
) {
    val toolbarHeightPx = remember { mutableStateOf(0f) }
    val topPanelOffset = remember { mutableStateOf(0f) }
    Scaffold(
        modifier = Modifier
            .fillMaxSize()
            .testTag("VENDORS_LIST_TEST_TAG"),
        backgroundColor = VendorAppTheme.colors.background,
        snackbarHost = { ChatsumerSnackbar(it) }
    ) { paddings ->

        CoordinatedScroll(
            collapsingAreaHeightPx = toolbarHeightPx
...
